fix: sunrise/sunset on small screen

--- a/src/components/CurrentWeather.css
+++ b/src/components/CurrentWeather.css
@@ -4,7 +4,6 @@
     grid-template-columns: repeat(4, 1fr);
 }
 
-
 @media (max-width: 600px) {
     .CurrentWeather {
         grid-template-columns: repeat(2, 1fr);
@@ -15,7 +14,6 @@
         grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 1;
-
     }
 
     .CurrentWeatherAnimatedIcon {
@@ -32,7 +30,7 @@
 }
 
 .CurrentWeatherTempAndFeelsLike {
-    margin-bottom: .6em;
+    margin-bottom: 0.6em;
 }
 
 .CurrentWeatherRealTemp {
@@ -40,23 +38,23 @@
 }
 
 .CurrentWeatherIcon {
-    margin-right: .5em;
+    margin-right: 0.5em;
 }
 
 .CurrentWeatherHumidity,
 .CurrentWeatherWind,
 .CurrentWeatherUV {
     display: flex;
-    font-size: .8em;
+    font-size: 0.8em;
     margin: 0.2em auto;
 }
 
 .CurrentWeatherWindCursor {
-    margin-left: .25em;
+    margin-left: 0.25em;
 }
 
 .CurrentWeatherUVValue {
-    margin-left: .2em;
+    margin-left: 0.2em;
 }
 
 .CurrentWeatherUV-low {
@@ -83,7 +81,8 @@
 }
 
 .CurrentWeatherSunRiseAndSet {
-    font-size: .8em;
+    font-size: 0.8em;
+    display: flex;
 }
 
 .CurrentWeatherSunRiseIcon {
